--- a/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/5-2-hello-world-gui-edit.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/5-2-hello-world-gui-edit.mdx
@@ -16,36 +16,36 @@ Now that we know what we know, there are some easy ways we can change the code:
  - We can _add_ lines of code, by copy pasting and adjusting them. For instance we could add a whole new letter! Although I have something else in mind...
 
 <Steps>
-1. First let's delete some code - we'll turn the `Hello` into `Hi`
+1. First let's delete some code - we'll turn the `HELLO` into `HI`
     ```diff lang="cpp"
         clear_screen(color_white());
         draw_text("Hello World! - using SplashKit shapes:", color_black(), 50, 50);
 
-        // H
+        // Draw the H
         fill_rectangle(color_red(), 50, 100, 20, 100);
         fill_rectangle(color_red(), 70, 140, 40, 20);
         fill_rectangle(color_red(), 110, 100, 20, 100);
 
-    -    // E
-    +    // I
+    -    // Draw the E
+    +    // Draw the I
         fill_rectangle(color_orange(), 150, 100, 20, 100);
     -    fill_rectangle(color_orange(), 170, 100, 40, 20);
     -    fill_rectangle(color_orange(), 170, 140, 20, 20);
     -    fill_rectangle(color_orange(), 170, 180, 40, 20);
     -
-    -    // L
+    -    // Draw the L
     -    fill_rectangle(color_gold(), 230, 100, 20, 100);
     -    fill_rectangle(color_gold(), 250, 180, 40, 20);
     -
-    -    // L
+    -    // Draw the L
     -    fill_rectangle(color_green_yellow(), 310, 100, 20, 100);
     -    fill_rectangle(color_green_yellow(), 330, 180, 40, 20);
     -
-    -    // O
+    -    // Draw the O
     -    fill_ellipse(color_lime_green(), 390, 100, 80, 100);
     -    fill_ellipse(color_white(), 410, 120, 40, 60);
 
-        // W
+        // Draw the W
         fill_triangle(color_green(), 50, 250, 90, 370, 120, 250);
         fill_triangle(color_green(), 90, 250, 120, 370, 160, 250);
         fill_triangle(color_white(), 70, 250, 90, 310, 110, 250);
@@ -57,10 +57,10 @@ Now that we know what we know, there are some easy ways we can change the code:
     What we've done here is delete all the code that creates the letters `L L O`, and _most_ of what makes the letter `E`. The `E` was drawn with four rectangles - we'll leave the line of code that draw the left-most vertical rectangle (which becomes our `I`), but delete the rest.
 
     <details>
-    <summary>What about the `// E`? What does it do?</summary>
-        The `// E` is just a _comment_. It helps _us_ understand the code, but the compiler pretty much just ignores it. You can leave it as `// E` and it won't have any effect :)
+    <summary>What about the `// Draw the E`? What does it do?</summary>
+        The `// Draw the E` is just a _comment_. It helps _us_ understand the code, but the compiler pretty much just ignores it. You can leave it as `// Draw the E` and it won't have any effect :)
 
-        But it's still better to change it to `// I` of course! We don't want our comments to become out-of-date and contradict the code, since it'll confuse other people (and ourselves in a few weeks!)
+        But it's still better to change it to `// Draw the I` of course! We don't want our comments to become out-of-date and contradict the code, since it'll confuse other people (and ourselves in a few weeks!)
     </details>
 
 2. Save, re-compile the code, and run it!
@@ -90,26 +90,26 @@ Now that we know what we know, there are some easy ways we can change the code:
             clear_screen(color_white());
             draw_text("Hello World! - using SplashKit shapes:", color_black(), 50, 50);
 
-            // H
+            // Draw the H
             fill_rectangle(color_red(), 50, 100, 20, 100);
             fill_rectangle(color_red(), 70, 140, 40, 20);
             fill_rectangle(color_red(), 110, 100, 20, 100);
 
-            // I
+            // Draw the I
             fill_rectangle(color_orange(), 150, 100, 20, 100);
 
-            // W
+            // Draw the W
             fill_triangle(color_green(), 50, 250, 90, 370, 120, 250);
             fill_triangle(color_green(), 90, 250, 120, 370, 160, 250);
             fill_triangle(color_white(), 70, 250, 90, 310, 110, 250);
             fill_triangle(color_white(), 100, 250, 120, 310, 140, 250);
             fill_rectangle(color_white(), 70, 350, 80, 30);
 
-            // O
+            // Draw the O
             fill_ellipse(color_blue(), 170, 250, 80, 100);
             fill_ellipse(color_white(), 190, 270, 40, 60);
 
-            // R
+            // Draw the R
             fill_triangle(color_blue_violet(), 270, 250, 270, 350, 340, 350);
             fill_triangle(color_white(), 252, 250, 252, 350, 320, 350);
             fill_ellipse(color_blue_violet(), 252, 250, 80, 60);
@@ -117,17 +117,17 @@ Now that we know what we know, there are some easy ways we can change the code:
             fill_rectangle(color_white(), 252, 250, 20, 100);
             fill_rectangle(color_blue_violet(), 270, 250, 20, 100);
 
-            // L
+            // Draw the L
             fill_rectangle(color_purple(), 360, 250, 20, 100);
             fill_rectangle(color_purple(), 380, 330, 40, 20);
 
-            // D
+            // Draw the D
             fill_ellipse(color_magenta(), 420, 250, 100, 100);
             fill_ellipse(color_white(), 440, 270, 60, 60);
             fill_rectangle(color_white(), 420, 250, 30, 100);
             fill_rectangle(color_magenta(), 450, 250, 20, 101);
 
-            // !
+            // Draw the !
             fill_rectangle(color_pink(), 550, 250, 20, 60);
             fill_circle(color_pink(), 560, 340, 10);
 
@@ -175,16 +175,16 @@ Now that we know what we know, there are some easy ways we can change the code:
     Here's the code for drawing the `H` and the `I`:
 
     ```c++ {6-7}
-        // H
-        fill_rectangle(color_red(), 50, 100, 20, 100);
-        fill_rectangle(color_red(), 70, 140, 40, 20);
-        fill_rectangle(color_red(), 110, 100, 20, 100);
+        // Draw the H
+        fill_rectangle(color_slate_gray(), 50, 100, 20, 100);
+        fill_rectangle(color_white(), 70, 140, 40, 20);
+        fill_rectangle(color_white(), 110, 100, 20, 100);
 
 
 
 
-        // I
-        fill_rectangle(color_orange(), 150, 100, 20, 100);
+        // Draw the I
+        fill_rectangle(color_white(), 150, 100, 20, 100);
     ```
 
     We can see there are two clear sections - one draws the `H`, and the other draws the `I`.
@@ -193,7 +193,7 @@ Now that we know what we know, there are some easy ways we can change the code:
 
     The secret to doing this is in the last few lines of the program:
     ```c++ {5-6}
-        // !
+        // Draw the !
         fill_rectangle(color_white(), 550, 250, 20, 60);
         fill_circle(color_white(), 560, 340, 10);
 
@@ -229,16 +229,16 @@ Now that we know what we know, there are some easy ways we can change the code:
             clear_screen(color_white());
             draw_text("Hello World! - using SplashKit shapes:", color_black(), 50, 50);
 
-            // H
-            fill_rectangle(color_red(), 50, 100, 20, 100);
-            fill_rectangle(color_red(), 70, 140, 40, 20);
-            fill_rectangle(color_red(), 110, 100, 20, 100);
+            // Draw the H
+            fill_rectangle(color_slate_gray(), 50, 100, 20, 100);
+            fill_rectangle(color_slate_gray(), 70, 140, 40, 20);
+            fill_rectangle(color_slate_gray(), 110, 100, 20, 100);
 
         +    refresh_screen();
         +    delay(1000);
 
-            // I
-            fill_rectangle(color_orange(), 150, 100, 20, 100);
+            // Draw the I
+            fill_rectangle(color_white(), 150, 100, 20, 100);
         ```
     </details>
 
