--- a/src/content/docs/book/part-1-instructions/2-data/4-activities/03-3-drawing.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/4-activities/03-3-drawing.mdx
@@ -1,10 +1,10 @@
 ---
-title: Creative Drawing
+title: Dynamic Creative Drawing
 sidebar:
-    label: " - Creative Drawing"
+    label: " - Dynamic Creative Drawing"
 ---
 
-For this task you can build on the ideas from the [house drawing](/book/part-1-instructions/1-sequence/1-tour/02-00-house-drawing) tour. You may also find it useful to read about [drawing in SplashKit](/book/part-1-instructions/1-sequence/2-trailside/11-2-graphics/#drawing-to-a-window) and [playing sound effects in SplashKit](/book/part-1-instructions/1-sequence/2-trailside/11-3-audio) for this task.
+For this task you can build on the ideas from the [house drawing](/book/part-1-instructions/2-data/3-guided-tour/02-00-house-drawing) tour. You may also find it useful to read about [drawing in SplashKit](/book/part-1-instructions/1-sequence/2-trailside/11-2-graphics/#drawing-to-a-window) and [playing sound effects in SplashKit](/book/part-1-instructions/1-sequence/2-trailside/11-3-audio) for this task.
 
 Create a program that draws a custom scene, picture, or animation using shapes and colors from SplashKit - while sticking with just sequence and data.
 
