Disable copying the TYK descriptions  - can't think of any valid reason to be able to...?

--- a/src/content/docs/book/part-1-instructions/2-data/4-activities/03-1-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/4-activities/03-1-calculator.mdx
@@ -3,7 +3,9 @@ title: Calculator
 sidebar:
     label: " - Calculator"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
+<NoCopy>
 Build a savings calculator that when run will show output based on what is shown below.
 
 ```txt
@@ -23,6 +25,7 @@ Or build a similar terminal based program of your own design. It will need to:
 - read text and numeric data from the user - at least three values.
 - perform a calculation involving multiple steps, with outputs shown at each step
 - output the results
+</NoCopy>
 
 :::caution
 Make sure to only use the things we have covered. Don't worry about formatting the numbers in the output for now, just focus on getting the variables and sequence of method calls right.
