--- a/src/content/docs/book/part-1-instructions/2-data/4-activities/03-2-media-player.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/4-activities/03-2-media-player.mdx
@@ -3,10 +3,12 @@ title: Music Player
 sidebar:
     label: " - Music Player"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
 
 :::tip
 Make sure to read about [playing music in SplashKit](/book/part-1-instructions/1-sequence/2-trailside/11-3-audio) for this task.
 :::
+<NoCopy>
 
 We can use sequence and data to play around with the sound playing features of SplashKit. This program will ask the user to enter the path to a sound effect to play, how long to play it for, an initial volume and a final volume. This will then output messages saying what it is doing, while it plays the music.
 
@@ -28,6 +30,7 @@ Stopping music
 Playing Test1 at 1.0 volume for 30 seconds...
 Stopping music
 ```
+</NoCopy>
 
 :::tip[Where can I get a file?]
 You can download this [sample audio](https://programmers.guide/resources/code-examples/part-0/hello-world-snippet-saddle-club.ogg) file.
