--- a/src/content/docs/book/part-1-instructions/2-data/4-activities/03-3-drawing.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/4-activities/03-3-drawing.mdx
@@ -3,6 +3,9 @@ title: Dynamic Creative Drawing
 sidebar:
     label: " - Dynamic Creative Drawing"
 ---
+import NoCopy from '/src/components/NoCopy.astro'
+
+<NoCopy>
 
 For this task you can build on the ideas from the [house drawing](/book/part-1-instructions/2-data/3-guided-tour/02-00-house-drawing) tour. You may also find it useful to read about [drawing in SplashKit](/book/part-1-instructions/1-sequence/2-trailside/11-2-graphics/#drawing-to-a-window) and [playing sound effects in SplashKit](/book/part-1-instructions/1-sequence/2-trailside/11-3-audio) for this task.
 
@@ -35,6 +38,7 @@ Andrew! (delay then print) Spiders everywhere!
 ```
 
 Hopefully that gives you an idea of what you could do here.
+</NoCopy>
 
 :::caution
 
