Add draft of Sequence Guided Tour (chatbot) + other misc  - integrated 'terminal/graphical commands to use' into tour  - some fixed links  - moved airspeed + water bottle activities into guided tour (optional)

--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-00-simple-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-00-simple-calculator.mdx
@@ -7,7 +7,7 @@ For this part of the guided tour, we will build a travel calculator that can est
 
 ## Step 1: Understand what we want
 
-To build a program you must know what you are trying to create. So what do we want as output from this program? The following is an example of what I am after:
+Similar to our previous programs, we first need to understand what we're aiming for. Below is an example of the output of the program we're trying to create.
 
 ```txt
 What is your name: Andrew
