--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-01-read-name.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-01-read-name.mdx
@@ -18,7 +18,7 @@ Hi Andrew.
 
 1. Open a folder in VS Code, and create a new `.cpp` file.
 
-2. Start by adding the [#include directive](/book/part-1-instructions/1-sequence/0-panorama/1-method-library) to access the SplashKit library, and an empty [`main` function](TODO).
+2. Start by adding the [#include directive](/book/part-1-instructions/1-sequence/0-panorama/1-method-library) to access the SplashKit library, and an empty [`main` function](/book/part-1-instructions/1-sequence/3-guided-tour/01-02-main-function/).
 
     <Accordion>
       <AccordionItem header="Code with #include directive">
