--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/03-01-airspeed-velocity.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/03-01-airspeed-velocity.mdx
@@ -1,5 +1,7 @@
 ---
 title: Airspeed Velocity
+banner:
+  content: This is an optional tour - use it to extend your understanding.
 ---
 import { YouTube } from 'astro-embed';
 
