--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/03-02-water-bottle-visualizer.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/03-02-water-bottle-visualizer.mdx
@@ -1,5 +1,7 @@
 ---
 title: Water Bottle Visualizer
+banner:
+  content: This is an optional tour - use it to extend your understanding.
 ---
 
 In the section on [variables](/book/part-1-instructions/1-sequence/2-trailside/07-variable#example-using-multiple-variables) we saw how to calculate the volume of water in a bottle. For this program, let's see how we could use SplashKit to draw this to the screen.
