--- a/src/content/docs/book/part-1-instructions/2-data/5-reference/06-type.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/5-reference/06-type.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Type"
 ---
+import CommmonLink from '/src/components/CommonLink.astro'
 import { YouTube } from 'astro-embed';
 
 In order to build programs, we need ways of making sense of data within the computer. 
@@ -98,6 +99,7 @@ The only important thing to remember is that not every floating point number can
 By default, numeric literals will be either `int` or `double`. For other types, C# provides suffix syntax for literals of specific types.
 
 ![The syntax for literal values of different types in C#.](./images/literal-type.png "The syntax for literal values of different types in C#.")
+<CommmonLink type="syntaxDiagramGuide"/>
 :::
 
 ### Types in Expressions
