--- a/src/content/docs/book/part-1-instructions/2-data/5-reference/07-variable.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/5-reference/07-variable.mdx
@@ -1,6 +1,7 @@
 ---
 title: Variable and Constant
 ---
+import CommmonLink from '/src/components/CommonLink.astro'
 import { YouTube } from 'astro-embed';
 
 While fixed literal values are useful, to make programs dynamic you need to be able to work with values that change.
@@ -43,6 +44,7 @@ Variables can be declared in C# using the following syntax:
 The syntax for declaring a constant is very similar:
 ![The syntax for constant declarations in C#.](./images/constant-declaration.png "The syntax for constant declarations in C#")
 <div class="caption">The syntax for constant declarations in C#</div><br/>
+<CommmonLink type="syntaxDiagramGuide"/>
 :::
 
 Variable and constant declarations use almost identical syntax in C#. The main difference between a variable and a constant is the `const` keyword at the start of the declaration. If you include `const`, you are creating constants. Without it, you are creating variables.
