--- a/src/content/docs/book/part-1-instructions/2-data/5-reference/08-assignment-statement.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/5-reference/08-assignment-statement.mdx
@@ -2,6 +2,7 @@
 title: "Assignment Statement"
 ---
 
+import CommmonLink from '/src/components/CommonLink.astro'
 import MySwiper from '../../../../../../components/react/myswiper.jsx'
 
 import Slide1int from './images/assignment-statements-in-depth/assignment-statement-int-division-01.png';
@@ -291,6 +292,7 @@ The ordering of these actions allow you to update the value of a variable using 
 
 :::tip[Syntax]
 ![The C# syntax for an assignment statement](./images/assignment-statement.png "The syntax for an assignment statement")
+<CommmonLink type="syntaxDiagramGuide"/>
 :::
 
 In C# the assignment operator is `=`.
